--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,25 @@
   <version>1.0</version>
   <inceptionYear>2008</inceptionYear>
   <properties>
-    <scala.version>2.9.1-1</scala.version>
+    <scala.major.version>2.11</scala.major.version>
+    <scala.version>${scala.major.version}.7</scala.version>
   </properties>
 
-  <repositories>
-    <repository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </repository>
-  </repositories>
+  <!--<repositories>-->
+    <!--<repository>-->
+      <!--<id>scala-tools.org</id>-->
+      <!--<name>Scala-Tools Maven2 Repository</name>-->
+      <!--<url>http://scala-tools.org/repo-releases</url>-->
+    <!--</repository>-->
+  <!--</repositories>-->
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </pluginRepository>
-  </pluginRepositories>
+  <!--<pluginRepositories>-->
+    <!--<pluginRepository>-->
+      <!--<id>scala-tools.org</id>-->
+      <!--<name>Scala-Tools Maven2 Repository</name>-->
+      <!--<url>http://scala-tools.org/repo-releases</url>-->
+    <!--</pluginRepository>-->
+  <!--</pluginRepositories>-->
 
   <dependencies>
     <!-- main dependencies -->
@@ -38,22 +39,22 @@
       <version>3.8</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>2.4</version>
     </dependency>
 
     <!-- test dependencies -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest</artifactId>
-      <version>1.3</version>
+      <artifactId>scalatest_${scala.major.version}</artifactId>
+      <version>2.2.4</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -63,9 +64,9 @@
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>3.2.2</version>
         <executions>
           <execution>
             <goals>
@@ -76,12 +77,16 @@
         </executions>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
+          <jvmArgs>
+            <jvmArg>-Xms64m</jvmArg>
+            <jvmArg>-Xmx1024m</jvmArg>
+          </jvmArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>2.5.5</version>
         <configuration>
           <archive>
             <manifest>
@@ -107,9 +112,9 @@
   <reporting>
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>3.2.2</version>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
